--- a/app/src/main/res/layout/buy_and_sell_4th_item.xml
+++ b/app/src/main/res/layout/buy_and_sell_4th_item.xml
@@ -23,7 +23,7 @@
         <ImageView
             android:layout_width="@dimen/dimen_xxlarge"
             android:layout_height="@dimen/dimen_xxlarge"
-            android:src="@drawable/crm" />
+            app:srcCompat="@drawable/crm" />
 
         <LinearLayout
             android:orientation="vertical"
