--- a/app/src/main/res/layout/buy_and_sell_4th_layout.xml
+++ b/app/src/main/res/layout/buy_and_sell_4th_layout.xml
@@ -83,7 +83,7 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/shape_question"
+                    app:srcCompat="@drawable/shape_question"
                     android:background="@drawable/shape_circle"
                     android:padding="@dimen/padding_small"
                     android:layout_marginLeft="@dimen/padding_small"
@@ -92,7 +92,7 @@
                     android:id="@+id/imageView_buy_and_sell_4th_back"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/shape_arrow_left"
+                    app:srcCompat="@drawable/shape_arrow_left"
                     android:background="@drawable/shape_circle"
                     android:padding="@dimen/padding_small"
                     />
@@ -139,7 +139,7 @@
             <ImageView
                 android:layout_width="@dimen/dimen_large"
                 android:layout_height="@dimen/dimen_large"
-                android:src="@drawable/jame_radif"
+                app:srcCompat="@drawable/jame_radif"
                 android:tint="@color/primary_text"/>
             <TextView
                 android:layout_width="wrap_content"
@@ -171,7 +171,7 @@
             <ImageView
                 android:layout_width="@dimen/dimen_large"
                 android:layout_height="@dimen/dimen_large"
-                android:src="@drawable/jame_meghdar"
+                app:srcCompat="@drawable/jame_meghdar"
                 android:tint="@color/primary_text"/>
             <TextView
                 android:layout_width="wrap_content"
@@ -203,7 +203,7 @@
             <ImageView
                 android:layout_width="@dimen/dimen_large"
                 android:layout_height="@dimen/dimen_large"
-                android:src="@drawable/shape_cash"
+                app:srcCompat="@drawable/shape_cash"
                 android:tint="@color/primary_text"/>
             <TextView
                 android:layout_width="wrap_content"
