--- a/app/src/main/res/layout/transaction_item.xml
+++ b/app/src/main/res/layout/transaction_item.xml
@@ -50,7 +50,7 @@
                     android:id="@+id/imageView_transaction_label"
                     android:layout_width="@dimen/dimen_xxmedium"
                     android:layout_height="match_parent"
-                    android:src="@drawable/naghdi_normal"/>
+                    app:srcCompat="@drawable/naghdi_normal"/>
 
             </LinearLayout>
 
@@ -156,7 +156,7 @@
                         android:adjustViewBounds="true"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/shape_arrow_drop_down"
+                        app:srcCompat="@drawable/shape_arrow_drop_down"
                         android:backgroundTint="@color/primary_dark"
                         android:padding="@dimen/padding_medium"/>
 
