--- a/app/src/main/res/layout/add_account_bank_layout.xml
+++ b/app/src/main/res/layout/add_account_bank_layout.xml
@@ -1,10 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layoutDirection="rtl"
     android:padding="@dimen/padding_box"
     android:background="#E6242E42">
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
 
     <LinearLayout
         android:layout_marginBottom="@dimen/padding_large"
@@ -20,7 +32,7 @@
                 android:id="@+id/imageView_add_account_banki_help"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/shape_question"
+                app:srcCompat="@drawable/shape_question"
                 android:background="@drawable/shape_circle"
                 android:padding="@dimen/padding_small"
                 android:layout_marginLeft="@dimen/padding_small"
@@ -29,7 +41,7 @@
                 android:id="@+id/imageView_add_account_banki_close"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/shape_close"
+                app:srcCompat="@drawable/shape_close"
                 android:background="@drawable/shape_circle"
                 android:padding="@dimen/padding_small"
                 />
@@ -232,5 +244,9 @@
             android:paddingBottom="@dimen/padding_medium"
             android:text="ثبت"/>
     </LinearLayout>
+
+    </LinearLayout>
+
+    </ScrollView>
 
 </LinearLayout>
