--- a/app/src/main/res/layout/add_account_layout.xml
+++ b/app/src/main/res/layout/add_account_layout.xml
@@ -6,6 +6,16 @@
     android:padding="@dimen/padding_box"
     android:background="#E6242E42">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            >
+
     <LinearLayout
         android:layout_marginBottom="@dimen/padding_large"
         android:layout_width="match_parent"
@@ -210,7 +220,6 @@
             android:visibility="gone"
             android:id="@+id/textView_add_account_mande"
             android:hint="مانده اول دوره"
-            android:lines="5"
             android:gravity="top"
             android:inputType="text"
             />
@@ -218,7 +227,6 @@
             style="@style/etStyle"
             android:id="@+id/editText_add_account_mande"
             android:hint="مانده اول دوره"
-            android:lines="5"
             android:layout_width="0dp"
             android:layout_weight="2"
             android:gravity="top"
@@ -228,7 +236,7 @@
         <Spinner
             android:id="@+id/spinner_add_account_mande_type"
             android:layout_width="0dp"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:layout_height="wrap_content"
             android:textSize="@dimen/font_small"
             android:textColorHint="#ababab"
@@ -309,5 +317,9 @@
             android:textColor="@color/icons"
             android:textSize="@dimen/font_small" />
     </LinearLayout>
+
+            </LinearLayout>
+
+    </ScrollView>
 
 </LinearLayout>
