--- a/app/src/main/res/layout/bill_show_item.xml
+++ b/app/src/main/res/layout/bill_show_item.xml
@@ -167,7 +167,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                             android:layout_width="0dp"
                             android:layout_weight="2.5"
                             android:layout_height="@dimen/dimen_xxmedium"
-                            android:src="@drawable/bestankar"/>
+                            app:srcCompat="@drawable/bestankar"/>
 
 
                     </LinearLayout>
@@ -190,7 +190,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                     android:adjustViewBounds="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/shape_arrow_drop_down"
+                    app:srcCompat="@drawable/shape_arrow_drop_down"
                     android:backgroundTint="@color/primary_dark"
                     android:padding="@dimen/padding_medium"/>
 
