--- a/app/src/main/res/layout/main_item.xml
+++ b/app/src/main/res/layout/main_item.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layoutDirection="rtl"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_margin="@dimen/padding_large">
 
     <LinearLayout
@@ -49,6 +49,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="نوید مندیس"
+                android:lines="1"
                 android:textColor="@color/new_text"
                 android:textSize="@dimen/font_small"/>
 
