--- a/app/src/main/res/layout/add_account_layout.xml
+++ b/app/src/main/res/layout/add_account_layout.xml
@@ -216,27 +216,30 @@
         android:background="@drawable/shape_border">
         <TextView
             style="@style/etStyle"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="2"
             android:visibility="gone"
             android:id="@+id/textView_add_account_mande"
             android:hint="مانده اول دوره"
             android:gravity="top"
             android:inputType="text"
+            android:paddingLeft="@dimen/padding_bit"
             />
         <EditText
             style="@style/etStyle"
             android:id="@+id/editText_add_account_mande"
             android:hint="مانده اول دوره"
             android:layout_width="0dp"
-            android:layout_weight="2"
+            android:layout_weight="2.5"
             android:gravity="top"
+            android:paddingLeft="@dimen/padding_bit"
             android:inputType="number"
             />
 
         <Spinner
             android:id="@+id/spinner_add_account_mande_type"
             android:layout_width="0dp"
-            android:layout_weight="2"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:textSize="@dimen/font_small"
             android:textColorHint="#ababab"
