--- a/app/src/main/res/layout/confirm_dialog_layout.xml
+++ b/app/src/main/res/layout/confirm_dialog_layout.xml
@@ -18,6 +18,7 @@
             android:weightSum="5">
 
             <TextView
+                android:id="@+id/textView_dialog_text"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:layout_weight="1"
